# nysa

./: .gitignore  CONFIG.md  Cargo.toml  Justfile  README.md  build.rs  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
nysa-utils/: Cargo.toml
nysa-utils/src/: lib.rs
src/: main.rs  ota.rs  storage.rs  web_server.rs  wifi.rs
static/: 404.html  connected.html  index.html
