[package]
name = "nysa"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
log = "0.4"
anyhow = "1"
esp-idf-svc = { version = "0.51", default-features = false, features = ["binstart", "alloc", "std", "experimental"] }
esp-idf-hal = "0.45"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nysa-utils = { path = "nysa-utils" }

[build-dependencies]
anyhow = "1"
embuild = { version = "0.32", features = [ "espidf" ] }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "joltwallet/littlefs", version = "~1.14.8" }

[[bin]]
name = "nysa"
path = "src/main.rs"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc", rev = "7b5bdf50009ac5ef03abb8e713a1adecb48bc6d7" }

[profile.release]
opt-level = 3
lto = true
